add in raft concurrency and leader election

--- a/example/host_config.2.json
+++ b/example/host_config.2.json
@@ -1,10 +1,11 @@
 {
     "hostName": "127.0.0.1",
+    "id": 2,
     "port": 5432,
-    "siblings": ["127.0.0.1:7654", "127.0.0.1:6543"],
+    "siblings": ["http://127.0.0.1:7654", "http://127.0.0.1:6543"],
     "tags": [],
     "healthCheck": {
         "maxHealthTime": 10000,
-        "minHealthTime": 1000
+        "minHealthTime": 5000
     } 
 }
