--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
   },
   "devDependencies": {
     "@types/async-lock": "^1.1.1",
-    "@types/commander": "^2.12.2",
     "@types/express": "^4.16.1",
     "@types/got": "^9.4.1",
     "@types/node": "^11.13.0",
@@ -38,13 +37,14 @@
     "typescript": "^3.4.1"
   },
   "dependencies": {
-    "@types/await-timeout": "^0.3.0",
     "abort-controller": "^3.0.0",
     "async-lock": "^1.2.0",
     "axios": "^0.18.0",
     "commander": "^2.20.0",
     "delay": "^4.1.0",
+    "eventemitter": "^0.3.3",
     "express": "^4.16.4",
+    "got": "^9.6.0",
     "winston": "^3.2.1"
   }
 }
