--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/express": "^4.16.1",
     "@types/got": "^9.4.1",
     "@types/node": "^11.13.0",
+    "@types/uuid": "^3.4.4",
     "eslint": "^5.16.0",
     "nodemon": "^1.18.10",
     "ts-node": "^8.0.3",
@@ -45,6 +46,8 @@
     "eventemitter": "^0.3.3",
     "express": "^4.16.4",
     "got": "^9.6.0",
+    "moment": "^2.24.0",
+    "uuid": "^3.3.2",
     "winston": "^3.2.1"
   }
 }
