--- a/example/server/host_config.1.json
+++ b/example/server/host_config.1.json
@@ -1,8 +1,10 @@
 {
     "hostName": "127.0.0.1",
-    "id": 2,
-    "port": 5432,
-    "siblings": ["http://127.0.0.1:7654", "http://127.0.0.1:6543"],
+    "port": 6543,
+    "siblings": [
+        "http://127.0.0.1:7654",
+        "http://127.0.0.1:5432"
+    ],
     "tags": [],
     "healthCheck": {
         "maxHealthTime": 10000,
