--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@types/async-lock": "^1.1.1",
+    "@types/cli-table": "^0.3.0",
     "@types/express": "^4.16.1",
     "@types/got": "^9.4.1",
     "@types/node": "^11.13.0",
@@ -41,6 +42,8 @@
     "abort-controller": "^3.0.0",
     "async-lock": "^1.2.0",
     "axios": "^0.18.0",
+    "cli-table": "^0.3.1",
+    "colors": "^1.3.3",
     "commander": "^2.20.0",
     "delay": "^4.1.0",
     "eventemitter": "^0.3.3",
