--- a/example/server/host_config.0.json
+++ b/example/server/host_config.0.json
@@ -6,7 +6,7 @@
         "http://127.0.0.1:5432",
         "http://127.0.0.1:6543"
     ],
-    "tags": [],
+    "tags": ["example"],
     "healthCheck": {
         "maxHealthTime": 10000,
         "minHealthTime": 5000
