--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
   "devDependencies": {
     "@types/async-lock": "^1.1.1",
     "@types/cli-table": "^0.3.0",
+    "@types/dockerode": "^2.5.13",
     "@types/express": "^4.16.1",
+    "@types/get-port": "^4.2.0",
     "@types/got": "^9.4.1",
+    "@types/lodash": "^4.14.123",
     "@types/node": "^11.13.0",
     "@types/uuid": "^3.4.4",
     "eslint": "^5.16.0",
@@ -46,9 +49,12 @@
     "colors": "^1.3.3",
     "commander": "^2.20.0",
     "delay": "^4.1.0",
+    "dockerode": "^2.5.8",
     "eventemitter": "^0.3.3",
     "express": "^4.16.4",
+    "get-port": "^5.0.0",
     "got": "^9.6.0",
+    "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "os": "^0.1.1",
     "uuid": "^3.3.2",
